# learning_ocaml

./: .gitignore  README.md
cli_calculator_in_ocaml/: cli_calculator.opam  dune-project
cli_calculator_in_ocaml/test/: dune
cracklepop_in_ocaml/: dune-project
fibonacci_series_calculator_in_ocaml/: dune-project
fibonacci_series_calculator_in_ocaml/test/: dune
guessing_game_in_ocaml/: dune-project
todo_list_app/: dune-project  todos.json
todo_list_app/_opam/.opam-switch/: environment  switch-config  switch-state
todo_list_app/_opam/.opam-switch/config/: ocaml.config
todo_list_app/_opam/.opam-switch/install/: dune.changes  ocaml-base-compiler.changes  ocaml-config.changes  ocaml.changes  seq.changes  yojson.changes
todo_list_app/_opam/lib/ocaml/: Makefile.config  camlheader  camlheaderd  camlheaderi  camlinternalFormat.cmt  camlinternalFormat.cmti  camlinternalFormatBasics.cmt  camlinternalFormatBasics.cmti  camlinternalLazy.cmt  camlinternalLazy.cmti  camlinternalMod.cmt  camlinternalMod.cmti  camlinternalOO.cmt  camlinternalOO.cmti  expunge  ld.conf  std_exit.cmo  std_exit.cmt  std_exit.cmti  stdlib.cma  stdlib.cmt  stdlib.cmti  stdlib__Arg.cmt  stdlib__Arg.cmti  stdlib__Array.cmt  stdlib__Array.cmti  stdlib__ArrayLabels.cmt  stdlib__ArrayLabels.cmti  stdlib__Atomic.cmt  stdlib__Atomic.cmti  stdlib__Bigarray.cmt  stdlib__Bigarray.cmti  stdlib__Bool.cmt  stdlib__Bool.cmti  stdlib__Buffer.cmt  stdlib__Buffer.cmti  stdlib__Bytes.cmt  stdlib__Bytes.cmti  stdlib__BytesLabels.cmt  stdlib__BytesLabels.cmti  (+102 more)
todo_list_app/lib/: dune
todo_list_app/test/: dune
(+1319 files in other folders)
