(lang dune 3.8)

(name cli_calculator)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Odinaka Joy")

(maintainers "Odinaka Joy")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name cli_calculator)
 (synopsis "A simple cli calculator")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
