(lang dune 3.11)

(name craclepop)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Odinaka Joy")

(maintainers "Odinaka Joy")


(package
 (name craclepop)
 (synopsis "A craclepop program")
 (description "A program that prints out the numbers 1 to 100. If the number is divisible by 3, it prints Crackle instead of the number. If it's divisible by 5, it prints Pop. If it's divisible by both 3 and 5, it prints CracklePop")
 (depends ocaml dune))
